chore: ported to 1.20.6
Big networking refactor!